WIP: Make Wincrawl compile on Windows again.
Currently, Microsoft cannot compile Microsoft's own code.

--- a/Wincrawl2/Wincrawl2.vcxproj.filters
+++ b/Wincrawl2/Wincrawl2.vcxproj.filters
@@ -21,5 +21,49 @@
     <ClCompile Include="io.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hsluv.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main_loop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="places.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="things.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="color.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="color.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="hsluv.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="io.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main_loop.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="places.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="seq.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="things.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="triggers.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="view.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
