--- a/Wincrawl2/Wincrawl2.vcxproj
+++ b/Wincrawl2/Wincrawl2.vcxproj
@@ -142,13 +142,30 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalOptions>-lpthread %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="color.cpp" />
+    <ClCompile Include="hsluv.cpp" />
     <ClCompile Include="io.cpp" />
+    <ClCompile Include="main_loop.cpp" />
+    <ClCompile Include="places.cpp" />
+    <ClCompile Include="things.cpp" />
     <ClCompile Include="Wincrawl2.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="color.hpp" />
+    <ClInclude Include="hsluv.hpp" />
+    <ClInclude Include="io.hpp" />
+    <ClInclude Include="main_loop.hpp" />
+    <ClInclude Include="places.hpp" />
+    <ClInclude Include="seq.hpp" />
+    <ClInclude Include="things.hpp" />
+    <ClInclude Include="triggers.hpp" />
+    <ClInclude Include="view.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
