--- a/Wincrawl2/Wincrawl2.vcxproj.filters
+++ b/Wincrawl2/Wincrawl2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="vector_tools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="raytracer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="color.hpp">
@@ -76,6 +79,9 @@
     </ClInclude>
     <ClInclude Include="vector_tools.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="raytracer.hpp">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
