Fixed a few issues building on Windows, ASAN, etc.

--- a/Wincrawl2/Wincrawl2.vcxproj
+++ b/Wincrawl2/Wincrawl2.vcxproj
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="color.hpp" />
+    <ClInclude Include="hashMapShimsForVisualStudio.hpp" />
     <ClInclude Include="hsluv.hpp" />
     <ClInclude Include="io.hpp" />
     <ClInclude Include="main_loop.hpp" />
