--- a/Wincrawl2/Wincrawl2.vcxproj.filters
+++ b/Wincrawl2/Wincrawl2.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="hashMapShimsForVisualStudio.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="textbits.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
