There are two ways to fix a warning. Add a bunch of extraneous yet technically correct casts, or turn it off in settings. Today we have turned it off in settings.

--- a/Wincrawl2/Wincrawl2.vcxproj.filters
+++ b/Wincrawl2/Wincrawl2.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="screen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="textbits.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="color.hpp">
